--- a/views/topic.ejs
+++ b/views/topic.ejs
@@ -3,42 +3,52 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
   </head>
   <body>
-    <form action="/topics" method="post" >
-        <input placeholder="New Topic Name" type="text" name="name_topic" >
-        <input type="submit" value="Submit">
-    </form>
-    User id dari session:
-    <%= user_id  %>
-    <br>
-    <%= JSON.stringify(data) %>
-    <table>
-        <tr>
-          <th>Id</th>
-          <th>Topic Name</th>
-          <th>Made at</th>
-          <th>Actions</th>
-        </tr>
-        <% data.forEach(dt =>{%>
-        <tr>
-          <td><%= dt.id %></td>
-          <td><%= dt.name_topic %></td>
-          <% if (dt.createdAt == dt.updatedAt) { %>
-            <td><%= dt.updatedAt.toDateString()+' '+dt.updatedAt.toLocaleTimeString(); %></td>
-          <% } else {%>
-            <td><%= dt.updatedAt.toDateString()+' '+dt.updatedAt.toLocaleTimeString(); %> Edited</td>
-          <% }%>
-          <td>
-            <% if(user_id == dt.UserId) { %>
-              <a href="/topics/edit/<%=dt.id%>">EDIT</a> ||
-              <a href="/topics/delete/<%=dt.id%>">DELETE</a> ||
-            <%}%>
-            <a href="/topics/posts/<%=dt.id%>">Add Comment</a>
-          </td>
-        </tr>
-        <%})%>
-      </table>
+    <div class="container">
+      <form action="/topics" method="post" >
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Create New Topic</label>
+          <input type="text" name="name_topic" class="form-control" id="exampleFormControlInput1" placeholder="Enter new topic here">
+        </div>
+      <input type="submit" value="Submit">
+      </form>
+      User id dari session:
+      <%= user_id  %>
+      <br>
+      <%= JSON.stringify(data) %>
+      <div class="list-group">
+        <a class="list-group-item list-group-item-action"> Pick your topic</a>
+          <% data.forEach(dt =>{%>
+            <div class="row">
+              <div class="col-md-9">
+                <a href="/topics/posts/<%=dt.id%>" class="list-group-item list-group-item-action list-group-item-primary">
+                  <%= dt.name_topic %> <br>
+                  <% if (dt.createdAt == dt.updatedAt) { %>
+                    <%= dt.updatedAt.toDateString()+' '+dt.updatedAt.toLocaleTimeString(); %>
+                  <% } else {%>
+                    <%= dt.updatedAt.toDateString()+' '+dt.updatedAt.toLocaleTimeString(); %> Edited
+                  <% }%>
+                  by <%= dt.User.username %>
+                  </a>
+              </div>
+              <div class="col-md-3">
+                <% if(user_id == dt.UserId) { %>
+                  <div class="list-group-item">
+                    <button class="btn btn-primary" href="/topics/edit/<%=dt.id%>">EDIT</button>
+                    <button class="btn btn-danger" href="/topics/delete/<%=dt.id%>">DELETE</button>
+                  </div>
 
+                <%}%>
+              </div>
+            </div>
+          <%})%>
+      </div>
+    </div>
   </body>
 </html>
