--- a/views/topiced.ejs
+++ b/views/topiced.ejs
@@ -7,39 +7,39 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+  
   </head>
   <body>
-    <form action="/topics/posts/<%= data_topic.id%>" method="post" >
-        <input placeholder="Insert Comment" type="text" name="name_post" >
+    <form action="/topics" method="post" >
+        <input placeholder="New Topic Name" type="text" name="name_topic" >
         <input type="submit" value="Submit">
     </form>
     User id dari session:
     <%= user_id  %>
     <br>
-    <%= JSON.stringify(data_post) %>
-    You are at TOPIC: <%= data_topic.name_topic%>
-    <br>
+    <%= JSON.stringify(data) %>
     <table>
         <tr>
           <th>Id</th>
-          <th>Comments</th>
+          <th>Topic Name</th>
           <th>Made at</th>
-            <th></th>
+          <th>Actions</th>
         </tr>
-        <% data_post.forEach(dt =>{%>
+        <% data.forEach(dt =>{%>
         <tr>
           <td><%= dt.id %></td>
-          <td><%= dt.name_post %></td>
+          <td><%= dt.name_topic %></td>
           <% if (dt.createdAt == dt.updatedAt) { %>
-            <td><%= dt.updatedAt.toDateString()+' '+dt.updatedAt.toLocaleTimeString(); %> by <%= dt.User.username %></td>
+            <td><%= dt.updatedAt.toDateString()+' '+dt.updatedAt.toLocaleTimeString(); %></td>
           <% } else {%>
-            <td><%= dt.updatedAt.toDateString()+' '+dt.updatedAt.toLocaleTimeString(); %> Edited by <%= dt.User.username %></td>
+            <td><%= dt.updatedAt.toDateString()+' '+dt.updatedAt.toLocaleTimeString(); %> Edited</td>
           <% }%>
           <td>
             <% if(user_id == dt.UserId) { %>
-              <a href="/topics/posts/<%= data_topic.id%>/edit/<%=dt.id%>">EDIT</a> ||
-              <a href="/topics/posts/<%= data_topic.id%>/delete/<%=dt.id%>">DELETE</a>
+              <a href="/topics/edit/<%=dt.id%>">EDIT</a> ||
+              <a href="/topics/delete/<%=dt.id%>">DELETE</a> ||
             <%}%>
+            <a href="/topics/posts/<%=dt.id%>">Add Comment</a>
           </td>
         </tr>
         <%})%>
