--- a/views/post.ejs
+++ b/views/post.ejs
@@ -3,47 +3,50 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+<%- include layouts/bootstrap %>
+<%- include layouts/navi %>
   </head>
   <body>
+  <div class="container">
+    <div class="alert alert-success" role="alert">
+      You are at TOPIC: <strong> <%= data_topic.name_topic%> </strong>
+    </div>
+    <div class="form-group">
     <form action="/topics/posts/<%= data_topic.id%>" method="post" >
-        <input placeholder="Insert Comment" type="text" name="name_post" >
-        <input type="submit" value="Submit">
+        <input placeholder="Insert Comment" type="text" name="name_post" class="form-control" id="exampleFormControlInput1" >
+        <br>
+        <input class="btn btn-primary" type="submit" value="Submit">
     </form>
-    User id dari session:
-    <%= user_id  %>
-    <br>
-    <%= JSON.stringify(data_post) %>
-    You are at TOPIC: <%= data_topic.name_topic%>
-    <br>
-    <table>
-        <tr>
-          <th>Id</th>
-          <th>Comments</th>
-          <th>Made at</th>
-            <th></th>
-        </tr>
-        <% data_post.forEach(dt =>{%>
-        <tr>
-          <td><%= dt.id %></td>
-          <td><%= dt.name_post %></td>
-          <% if (dt.createdAt == dt.updatedAt) { %>
-            <td><%= dt.updatedAt.toDateString()+' '+dt.updatedAt.toLocaleTimeString(); %> by <%= dt.User.username %></td>
-          <% } else {%>
-            <td><%= dt.updatedAt.toDateString()+' '+dt.updatedAt.toLocaleTimeString(); %> Edited by <%= dt.User.username %></td>
-          <% }%>
-          <td>
-            <% if(user_id == dt.UserId) { %>
-              <a href="/topics/posts/<%= data_topic.id%>/edit/<%=dt.id%>">EDIT</a> ||
-              <a href="/topics/posts/<%= data_topic.id%>/delete/<%=dt.id%>">DELETE</a>
-            <%}%>
-          </td>
-        </tr>
-        <%})%>
-      </table>
+    </div>
 
+    <div class="list-group">
+      <% data_post.forEach(dt =>{%>
+      <div class="row">
+        <div class="col-md-10">
+          <a href="/topics/posts/<%= data_topic.id%>/edit/<%=dt.id%>" class="list-group-item list-group-item-action list-group-item-primary">
+            <strong>   <%= dt.name_post %> <br> </strong>
+              <% if (dt.createdAt.toLocaleString() == dt.updatedAt.toLocaleString()) { %>
+                <%= dt.updatedAt.toDateString()+' '+dt.updatedAt.toLocaleTimeString(); %>
+              <% } else {%>
+                <%= dt.updatedAt.toDateString()+' '+dt.updatedAt.toLocaleTimeString(); %> Edited
+              <% }%>
+                by <%= dt.User.username %>
+            </a>
+        </div>
+        <div class="col-md-2">
+          <% if(user_id == dt.UserId) { %>
+            <div class="list-group">
+              <a href="/topics/posts/<%= data_topic.id%>/edit/<%=dt.id%>">EDIT</a>
+            </div>
+            <br>
+            <div class="list-group">
+            <a href="/topics/posts/<%= data_topic.id%>/delete/<%=dt.id%>">DELETE </a>
+            </div>
+          <%}%>
+        </div>
+        </div>
+      <%})%>
+    </div>
+    </div>
   </body>
 </html>
