--- a/views/postEdit.ejs
+++ b/views/postEdit.ejs
@@ -1,16 +1,22 @@
 
 <!DOCTYPE html>
 <html>
+<div class="container">
   <head>
     <meta charset="utf-8">
     <title></title>
+    <%- include layouts/bootstrap %>
+    <%- include layouts/navi %>
   </head>
   <body>
     <form action="/topics/posts/<%=data.TopicId%>/edit/<%=data.id%>" method="post">
-        Edit Comment:<br>
-        <input type="text" name="name_post" value="<%=data.name_post %>">
-        <br><br>
-        <input type="submit" value="Submit">
+      <div class="alert alert-warning" role="alert">
+      <strong>  Edit your comment here </strong>
+      </div>
+        <input class="form-control form-control-lg" type="text" name="name_post" value="<%=data.name_post %>">
+        <br>
+        <input class="btn btn-primary" type="submit" value="Submit">
       </form>
   </body>
+</div>
 </html>
