--- a/views/topicEdit.ejs
+++ b/views/topicEdit.ejs
@@ -4,13 +4,19 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <%- include layouts/bootstrap %>
+    <%- include layouts/navi %>
   </head>
+  <div class="container">
   <body>
     <form action="/topics/edit/<%=data.id%>" method="post">
-        Edit Topic Name:<br>
-        <input type="text" name="name_topic" value="<%=data.name_topic %>">
-        <br><br>
-        <input type="submit" value="Submit">
+      <div class="alert alert-warning" role="alert">
+        <strong> Edit name of your topic </strong>
+        </div>
+        <input class="form-control form-control-lg" type="text" name="name_topic" value="<%=data.name_topic %>">
+        <br>
+        <input class="btn btn-primary" type="submit" value="Submit">
       </form>
   </body>
+</div>
 </html>
